[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Raunak Singh and this is my first webapp.
+            Hi! I am Raunak Singh and this is my first webapp
+            Fuck you Nishant.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
