[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Raunak Singh and this is my first webapp
-            Fuck you Nishant.
+            Love you All.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
