--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Raunak Singh and this is my first webapp
-            Love you All.
+            Hi! I am Raunak Singh and this is my first webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
